# ultralyticsSAM3_GUI

./: .gitignore  CREDITS.md  README.md  pyproject.toml  pytest.ini
Ultralytics/: settings.json
sam3_ultralytics/: __init__.py  backend.py  cache_store.py  cli.py  exceptions.py  export.py  gui.py  gui_app.py  gui_state.py  gui_widgets.py  gui_workers.py  image_inference.py  inference_scaling.py  io_utils.py  model_loading.py  project_io.py  prompt_handling.py  schemas.py  tracking.py  video_inference.py  visualization.py
tests/: conftest.py  test_backend.py  test_gui.py
tests/__pycache__/: test_backend.cpython-312-pytest-9.0.2.pyc.44960
tmp_sequence_export/: jacksonSquare_qoocam_00001_results.json  jacksonSquare_qoocam_00002_results.json
